# surety-diff

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml  release.yml  test.yml
requirements/: common.txt  test.txt
src/surety_diff/: compare.py
surety/diff/: __init__.py  diff.py  rules.py
tests/: test_compare_data.py  test_imports.py  test_rules.py
