[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surety-diff"
description = "Contract-aware diff and comparison engine for Surety."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Elena Kulgavaya", email = "elena.kulgavaya@gmail.com" }
]

dynamic = ["version"]

dependencies = [
    "surety>=0.0.3,<1.0"
]

keywords = [
    "diff",
    "comparison",
    "contract-testing",
    "automation",
    "surety"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
